Bug 23399: AX: some buttons don't expose AXPress as an action https://bugs.webkit.org/show_bug.cgi?id=23399

Canonical link: https://commits.webkit.org/32226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40030 268f45cc-cd09-0410-ab3c-d52691b4dbfc